0.8.3.b
    - simc works for MID, queue, and sender
    - DISK_FACTOR and COMMAND_FACTOR added
    - GLOBAL_RELAY_DISABLE_SENDER_CHECKING -> DISABLE_SENDER_CHECKING

0.8.3.a
    - simta one process model
    - simta_gettimeofday() preffered interface

0.8.2.d
    - ignore trailing dot in email addresses
    - removed timer debugging logging
    - disable from checking a global option now
    - DELIVER_AFTER_ACCEPT gos away

0.8.2.c
    - global_relay does normal domain checking for "Mail from"
    - timer bugfixes
    - RBL_LOG_ONLY bugfix

0.8.2.b
    - RBL_LOG_ONLY now a valid action
    - DNS string progression better defined, content filter defs changed

0.8.2.a
    - global connection throttles
    - connect startup sequence audit
    - local throttles overridden by RBL ACCEPT
    - connect sequence change
    - client hostname is "Unresolved" before DNS check
    - RBL check more error tolerant
    - CF Bounce
    - JAIL bugfix
    - REFUSE_MODE bugfix
    - DELIVER_AFTER_ACCEPT
    - timers

0.8.1.ab
    - simsendmail -r is the same as -f
    - simsendmail generates FROM header based on envelope from address
    - corrected Receive syslogs in header.c
    - hardfail message too large and too many received headers

0.8.1.aa
    - dont overwrite CID for cf

0.8.1.z
    - bad return bugfix

0.8.1.y
    - Don't hang up after 554

0.8.1.x
    - MAX_CONNECT log bug fixed

0.8.1.w
    - make sure that RBL_BLOCK gives back IP Address
    - bugfix for TIMEOUT call
    - more standardization for smtp banners

0.8.1.v
    - SMTP_OFF mode defined
    - TCP Wrapers before RBLs
    - RBL bugfix
    - string mismatch bugfix

0.8.1.u
    - lbwrap_url bugfix
    - banner audit of 421/251

0.8.1.t
    - transmitted size bugfix

0.8.1.s
    - queue time bug fixed
    - SIMTA_PID, SIMTA_CID variables in cf now
    - report data read and wrote to a client relative to Dfile size
    - no double syslog message
    - log more of what the client says

0.8.1.r
    - bugfix

0.8.1.q