@@ -1,4 +1,6 @@
 0.8.3.b
+    - simta_openlog() used instead of openlog()
+    - MAIL_JAIL directive added
     - simc works for MID, queue, and sender
     - DISK_FACTOR and COMMAND_FACTOR added
     - GLOBAL_RELAY_DISABLE_SENDER_CHECKING -> DISABLE_SENDER_CHECKING
